[gd_scene load_steps=8 format=3 uid="uid://bb3kelf7vivap"]

[ext_resource type="Script" path="res://scripts/players/player_game.gd" id="1_bnbqo"]
[ext_resource type="Script" path="res://scripts/players/multiplayer_synchronizer.gd" id="2_7semf"]
[ext_resource type="Texture2D" uid="uid://1air4pj5nii0" path="res://sprites/characters/cherpack.png" id="2_eqahp"]
[ext_resource type="Texture2D" uid="uid://b5xgndpciy6b7" path="res://sprites/tokens/food_token.png" id="3_qtfx6"]
[ext_resource type="Texture2D" uid="uid://cx4gtgn87gyi1" path="res://sprites/tokens/fate_token.png" id="4_xdkfg"]
[ext_resource type="Texture2D" uid="uid://cy58e1yghljjk" path="res://sprites/tokens/wound_token.png" id="5_807fd"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_eqsqn"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:food_amount")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:fate_amount")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:wound_amount")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:current_location")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:character_name")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:player_name")
properties/6/spawn = true
properties/6/replication_mode = 1

[node name="player_game" type="Node2D"]
script = ExtResource("1_bnbqo")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_eqsqn")
script = ExtResource("2_7semf")

[node name="character" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(176, 847)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_eqahp")

[node name="food" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(84, 500)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_qtfx6")

[node name="food_amount" type="Label" parent="food"]
z_index = 3
offset_left = 212.0
offset_top = -84.0
offset_right = 862.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 100
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="fate" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(84, 600)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_xdkfg")

[node name="fate_amount" type="Label" parent="fate"]
z_index = 3
offset_left = 212.0
offset_top = -84.0
offset_right = 862.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 100
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="wound" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(84, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_807fd")

[node name="wound_amount" type="Label" parent="wound"]
z_index = 3
offset_left = 212.0
offset_top = -84.0
offset_right = 862.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 100
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 881.0
offset_top = 876.0
offset_right = 1052.0
offset_bottom = 985.0
text = "Skill"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
